--- a/.env.development
+++ b/.env.development
@@ -3,6 +3,6 @@ ENV = 'development'
 
 # 若依管理系统/开发环境
 VUE_APP_BASE_API = '/dev-api'
-
+VUE_APP_AUTH_CENTER_URL = '//localhost:3000'
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
