--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 开发环境配置
 ENV = 'development'
 
-# 若依管理系统/开发环境
+# LMS管理系统/开发环境
 VUE_APP_BASE_API = '/dev-api'
 VUE_APP_AUTH_CENTER_URL = '//localhost:3000'
 # 路由懒加载
