--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ruoyi",
   "version": "2.5.0",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "LMS管理系统",
+  "author": "LMS",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
