--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,9 @@
 # 生产环境配置
 ENV = 'production'
-
 # LMS管理系统/开发环境
-VUE_APP_BASE_API = '/dev-api'
-VUE_APP_AUTH_CENTER_URL = '//auth.kaiyu.work'
+VUE_APP_BASE_API = '/pro-api'
+VUE_APP_AUTH_CENTER_URL = '//auth.kaiyu.work:9527'
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
+
+
