--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,8 @@
 ENV = 'production'
 # LMS管理系统/开发环境
 VUE_APP_BASE_API = '/pro-api'
-VUE_APP_AUTH_CENTER_URL = '//auth.kaiyu.work:9527'
+VUE_APP_SERVICE_URL = 'http://server.kaiyu.work:8888'
+VUE_APP_AUTH_CENTER_URL = 'http://auth.kaiyu.work:9527'
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
 
