--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "math.js": "^1.1.46",
     "mathjs": "^9.3.0",
     "nprogress": "0.2.0",
+    "print-template": "^1.2.4",
     "quill": "1.3.7",
     "screenfull": "5.0.2",
     "sortablejs": "1.10.2",
