--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ ENV = 'development'
 
 # LMS管理系统/开发环境
 VUE_APP_BASE_API = '/dev-api'
-VUE_APP_SERVICE_URL = 'http://kaiyu.wicp.vip:39592'
+VUE_APP_SERVICE_URL = 'http://server.kaiyu.work:8888'
 VUE_APP_AUTH_CENTER_URL = 'http://localhost:3000'
 # 路由懒加载
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
